// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllComments component component matches snapshot with 1 comment 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-eCApGN kSBqec"
      >
        <strong
          class="sc-jSFkmK iWLkmd"
        >
          Comments:
        </strong>
        <ul
          class="sc-gKAblj bSFzUK"
        >
          <li
            class="sc-bdnylx cIstot"
          >
            <div
              class="sc-dlnjPT hteMOl"
            >
              <div>
                <strong>
                  Name: 
                </strong>
                Jack
              </div>
              <div
                class="sc-hKFyIo icsRAl"
              >
                <strong>
                  Date: 
                </strong>
                10:00 1/1/2020
              </div>
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Rating: 
              </strong>
              2
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Email: 
              </strong>
              something@aol.com
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Comment: 
              </strong>
              adequate product
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-eCApGN kSBqec"
    >
      <strong
        class="sc-jSFkmK iWLkmd"
      >
        Comments:
      </strong>
      <ul
        class="sc-gKAblj bSFzUK"
      >
        <li
          class="sc-bdnylx cIstot"
        >
          <div
            class="sc-dlnjPT hteMOl"
          >
            <div>
              <strong>
                Name: 
              </strong>
              Jack
            </div>
            <div
              class="sc-hKFyIo icsRAl"
            >
              <strong>
                Date: 
              </strong>
              10:00 1/1/2020
            </div>
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Rating: 
            </strong>
            2
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Email: 
            </strong>
            something@aol.com
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Comment: 
            </strong>
            adequate product
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AllComments component component matches snapshot with multiple comments 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-eCApGN kSBqec"
      >
        <strong
          class="sc-jSFkmK iWLkmd"
        >
          Comments:
        </strong>
        <ul
          class="sc-gKAblj bSFzUK"
        >
          <li
            class="sc-bdnylx cIstot"
          >
            <div
              class="sc-dlnjPT hteMOl"
            >
              <div>
                <strong>
                  Name: 
                </strong>
                Jack
              </div>
              <div
                class="sc-hKFyIo icsRAl"
              >
                <strong>
                  Date: 
                </strong>
                10:04AM 1/1/2020
              </div>
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Rating: 
              </strong>
              3
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Email: 
              </strong>
              somewhere@aol.com
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Comment: 
              </strong>
              adequate product
            </div>
          </li>
          <li
            class="sc-bdnylx cIstot"
          >
            <div
              class="sc-dlnjPT hteMOl"
            >
              <div>
                <strong>
                  Name: 
                </strong>
                Jonny
              </div>
              <div
                class="sc-hKFyIo icsRAl"
              >
                <strong>
                  Date: 
                </strong>
                6:34PM 1/1/2020
              </div>
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Rating: 
              </strong>
              5
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Email: 
              </strong>
              over@aol.com
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Comment: 
              </strong>
              I love it!
            </div>
          </li>
          <li
            class="sc-bdnylx cIstot"
          >
            <div
              class="sc-dlnjPT hteMOl"
            >
              <div>
                <strong>
                  Name: 
                </strong>
                Jamie
              </div>
              <div
                class="sc-hKFyIo icsRAl"
              >
                <strong>
                  Date: 
                </strong>
                8:02PM 1/1/2020
              </div>
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Rating: 
              </strong>
              1
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Email: 
              </strong>
              the@aol.com
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Comment: 
              </strong>
              I hate it
            </div>
          </li>
          <li
            class="sc-bdnylx cIstot"
          >
            <div
              class="sc-dlnjPT hteMOl"
            >
              <div>
                <strong>
                  Name: 
                </strong>
                Joanne
              </div>
              <div
                class="sc-hKFyIo icsRAl"
              >
                <strong>
                  Date: 
                </strong>
                10:01AM 2/1/2020
              </div>
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Rating: 
              </strong>
              2
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Email: 
              </strong>
              rainbow@aol.com
            </div>
            <div
              class="sc-gtssRu blaTwj"
            >
              <strong>
                Comment: 
              </strong>
              I don't know how to feel
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-eCApGN kSBqec"
    >
      <strong
        class="sc-jSFkmK iWLkmd"
      >
        Comments:
      </strong>
      <ul
        class="sc-gKAblj bSFzUK"
      >
        <li
          class="sc-bdnylx cIstot"
        >
          <div
            class="sc-dlnjPT hteMOl"
          >
            <div>
              <strong>
                Name: 
              </strong>
              Jack
            </div>
            <div
              class="sc-hKFyIo icsRAl"
            >
              <strong>
                Date: 
              </strong>
              10:04AM 1/1/2020
            </div>
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Rating: 
            </strong>
            3
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Email: 
            </strong>
            somewhere@aol.com
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Comment: 
            </strong>
            adequate product
          </div>
        </li>
        <li
          class="sc-bdnylx cIstot"
        >
          <div
            class="sc-dlnjPT hteMOl"
          >
            <div>
              <strong>
                Name: 
              </strong>
              Jonny
            </div>
            <div
              class="sc-hKFyIo icsRAl"
            >
              <strong>
                Date: 
              </strong>
              6:34PM 1/1/2020
            </div>
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Rating: 
            </strong>
            5
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Email: 
            </strong>
            over@aol.com
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Comment: 
            </strong>
            I love it!
          </div>
        </li>
        <li
          class="sc-bdnylx cIstot"
        >
          <div
            class="sc-dlnjPT hteMOl"
          >
            <div>
              <strong>
                Name: 
              </strong>
              Jamie
            </div>
            <div
              class="sc-hKFyIo icsRAl"
            >
              <strong>
                Date: 
              </strong>
              8:02PM 1/1/2020
            </div>
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Rating: 
            </strong>
            1
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Email: 
            </strong>
            the@aol.com
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Comment: 
            </strong>
            I hate it
          </div>
        </li>
        <li
          class="sc-bdnylx cIstot"
        >
          <div
            class="sc-dlnjPT hteMOl"
          >
            <div>
              <strong>
                Name: 
              </strong>
              Joanne
            </div>
            <div
              class="sc-hKFyIo icsRAl"
            >
              <strong>
                Date: 
              </strong>
              10:01AM 2/1/2020
            </div>
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Rating: 
            </strong>
            2
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Email: 
            </strong>
            rainbow@aol.com
          </div>
          <div
            class="sc-gtssRu blaTwj"
          >
            <strong>
              Comment: 
            </strong>
            I don't know how to feel
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AllComments component component matches snapshot with no comments 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-eCApGN kSBqec"
      >
        <strong
          class="sc-jSFkmK iWLkmd"
        >
          Comments:
        </strong>
        <p
          class="sc-iCoHVE iOjWuE"
        >
          No comments available, be the first to leave a comment!
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-eCApGN kSBqec"
    >
      <strong
        class="sc-jSFkmK iWLkmd"
      >
        Comments:
      </strong>
      <p
        class="sc-iCoHVE iOjWuE"
      >
        No comments available, be the first to leave a comment!
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
